--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+h1,h2 {text-align: center;}
+#buttons{text-align: center; }
+
 #grid {
     padding-top: 30px;
     padding-left: 30px;
@@ -6,7 +9,8 @@
     /*for 3 column design*/
     grid-gap:5px;
     max-width: 350px;
-    justify-items: center;
+    justify-content: center;
+    margin: 0 auto;
 }
 
 #grid.col4 {
@@ -15,16 +19,20 @@
    
 }
 
-
 .hole {
     border: 1px solid black;
     min-height: 100px;
     width: 100px;
     border-radius: 50%;
+    background-color: #000;
+    background-image: url("./assets/mole2.png");
+    background-position: 0 900px;
+    background-repeat: no-repeat;
+    transition: background-position 0.5s linear;
 }
 
-.mole {
-   background-image: url("./assets/mole2.png");
+.hole.mole {
+    background-position: center;
 }
 
 .cursor img {
@@ -33,5 +41,11 @@
    height: 100px;
    transform: translate(-40px, -20px);
    pointer-events: none;
+   transition:all 0.2s linear;
+    transform: rotate(0);
+}
+
+.cursor img.whack{
+     transform: rotate(-60deg); 
 }
 
